# matCalc

./: CMakeLists.txt  abstractnumberpane.cpp  abstractnumberpane.h  abstractpage.cpp  abstractpage.h  calculationselectionlabel.cpp  calculationselectionlabel.h  calculator_basic.h  controlpane.cpp  controlpane.h  decimallineedit.cpp  decimallineedit.h  dimensionmismatchexception.cpp  dimensionmismatchexception.h  genericnumber.cpp  genericnumber.h  genericpane.cpp  genericpane.h  genericpane.ui  incompatiblepasteexception.cpp  incompatiblepasteexception.h  labelpane.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  matrixpage.cpp  matrixpage.h  matrixpane.cpp  matrixpane.h  numberpane.cpp  numberpane.h  reducedmatrix.cpp  reducedmatrix.h  signpane.cpp  signpane.h  sizerbar.cpp  sizerbar.h  (+18 more)
calc/: binaryoperatortoken.cpp  binaryoperatortoken.h  calculator.cpp  calculator.h  inputmatcher.cpp  inputmatcher.h  logger.cpp  logger.h  numbertoken.cpp  numbertoken.h  operatortoken.cpp  operatortoken.h  parenthesistoken.cpp  parenthesistoken.h  roottoken.cpp  roottoken.h  token.cpp  token.h
calculatorPage/: abstractpage.cpp  abstractpage.h  calculatorlineedit.cpp  calculatorlineedit.h  evaluationpage.cpp  evaluationpage.h  evaluationpage.ui  matrixpage.cpp  matrixpage.h  sizerbar.cpp  vectorpage.cpp  vectorpage.h
history/: calculationhistory.cpp  calculationhistory.h  historyitem.cpp  historyitem.h  historyitem.ui  historywindow.cpp  historywindow.h  historywriter.cpp  historywriter.h
numbers/: eigenspace.h  matrix.cpp  matrix.h  matrixdeclare.h  polynomial.cpp  polynomial.h  polynomialmatrix.cpp  polynomialmatrix.h  reducedmatrix.cpp  reducedmatrix.h  spanset.cpp  spanset.h  sturm.cpp  sturm.h  vector.cpp  vector.h
panes/: abstractnumberpane.h  controlpane.cpp  controlpane.h  decimallineedit.cpp  decimallineedit.h  eigenpane.cpp  eigenpane.h  genericpane.cpp  genericpane.h  incompatiblepasteexception.cpp  incompatiblepasteexception.h  labelpane.cpp  labelpane.h  matrixpane.cpp  matrixpane.h  numberpane.cpp  signpane.cpp  signpane.h  spansetpane.cpp  spansetpane.h  vectorpane.cpp  vectorpane.h
